Fixed some layout issues for phone

--- a/src/styles/base/core.css
+++ b/src/styles/base/core.css
@@ -1,10 +1,20 @@
-/* src/styles/base/core.css */
+*, *::before, *::after {
+    box-sizing: border-box;
+}
+
+html, body {
+    overflow-x: hidden;
+    max-width: 100vw;
+}
+
 body {
     background-color: var(--bg-main);
     color: var(--text-primary);
     font-family: var(--font-main);
     padding: 0;
     margin: 0;
+    min-height: 100vh;
+    min-height: -webkit-fill-available; 
 }
 
 html {
